// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`tile ac huge 1`] = `
<style>
.IS1 {
  width: 100%;
}

.IS2 {
  margin-bottom: 0px;
}

.IS3 {
  color: #1D1D1B;
  font-family: TimesModern-Bold;
  font-weight: 400;
  margin-bottom: 0;
  font-size: 35;
  line-height: 35px;
  text-align: center;
}

.IS4 {
  flex: 1;
  align-items: center;
  justify-content: center;
  background-color: #F0F0F0;
  padding-horizontal: 20px;
  padding-vertical: 70px;
}
</style>

<Link
  linkStyle={
    Object {
      "flex": 1,
      "padding": "10px",
    }
  }
  url="/article/123"
>
  <Image
    aspectRatio={1.7777777777777777}
    className="IS1"
    fill={true}
    uri="//www.thetimes.co.uk/imageserver/image/methode%2Ftimes%2Fprod%2Fweb%2Fbin%2Fd3abdbfc-1776-11e6-b4ba-d249b128bacc.jpg?crop=620%2C348%2C0%2C32"
  />
  <div
    className="tc-view__TcView-nuazoi-0 fPjBcr IS4"
  >
    <div
      className="tc-view__TcView-nuazoi-0 fPjBcr IS2"
    >
      <ArticleLabel
        color="#005B8D"
        isVideo={false}
        title="label"
      />
    </div>
    <div
      aria-level="3"
      className="tc-text__TcText-sc-15igzev-0 lhcAkf IS3"
      role="heading"
    >
      This is tile headline
    </div>
    <ArticleFlags
      flags={
        Array [
          Object {
            "expiryTime": "2030-03-14T12:00:00.000Z",
            "type": "EXCLUSIVE",
          },
        ]
      }
      longRead={true}
    />
  </div>
</Link>
`;

exports[`tile ac medium 1`] = `
<style>
.IS1 {
  width: 100%;
}

.IS2 {
  margin-bottom: 0px;
}

.IS3 {
  color: #1D1D1B;
  font-family: TimesModern-Bold;
  font-weight: 400;
  margin-bottom: 0;
  font-size: 30;
  line-height: 30px;
  text-align: center;
}

.IS4 {
  flex: 1;
  align-items: center;
  justify-content: center;
  background-color: #F0F0F0;
  padding-horizontal: 20px;
  padding-vertical: 40px;
}
</style>

<Link
  linkStyle={
    Object {
      "flex": 1,
      "padding": "10px",
    }
  }
  url="/article/123"
>
  <Image
    aspectRatio={1.7777777777777777}
    className="IS1"
    fill={true}
    uri="//www.thetimes.co.uk/imageserver/image/methode%2Ftimes%2Fprod%2Fweb%2Fbin%2Fd3abdbfc-1776-11e6-b4ba-d249b128bacc.jpg?crop=620%2C348%2C0%2C32"
  />
  <div
    className="tc-view__TcView-nuazoi-0 fPjBcr IS4"
  >
    <div
      className="tc-view__TcView-nuazoi-0 fPjBcr IS2"
    >
      <ArticleLabel
        color="#005B8D"
        isVideo={false}
        title="label"
      />
    </div>
    <div
      aria-level="3"
      className="tc-text__TcText-sc-15igzev-0 lhcAkf IS3"
      role="heading"
    >
      This is tile headline
    </div>
    <ArticleFlags
      flags={
        Array [
          Object {
            "expiryTime": "2030-03-14T12:00:00.000Z",
            "type": "EXCLUSIVE",
          },
        ]
      }
      longRead={true}
    />
  </div>
</Link>
`;

exports[`tile ac wide 1`] = `
<style>
.IS1 {
  width: 100%;
}

.IS2 {
  margin-bottom: 0px;
}

.IS3 {
  color: #1D1D1B;
  font-family: TimesModern-Bold;
  font-weight: 400;
  margin-bottom: 0;
  font-size: 30;
  line-height: 30px;
  text-align: center;
}

.IS4 {
  flex: 1;
  align-items: center;
  justify-content: center;
  background-color: #F0F0F0;
  padding-horizontal: 20px;
  padding-vertical: 30px;
}
</style>

<Link
  linkStyle={
    Object {
      "flex": 1,
      "padding": "10px",
    }
  }
  url="/article/123"
>
  <Image
    aspectRatio={1.7777777777777777}
    className="IS1"
    fill={true}
    uri="//www.thetimes.co.uk/imageserver/image/methode%2Ftimes%2Fprod%2Fweb%2Fbin%2Fd3abdbfc-1776-11e6-b4ba-d249b128bacc.jpg?crop=620%2C348%2C0%2C32"
  />
  <div
    className="tc-view__TcView-nuazoi-0 fPjBcr IS4"
  >
    <div
      className="tc-view__TcView-nuazoi-0 fPjBcr IS2"
    >
      <ArticleLabel
        color="#005B8D"
        isVideo={false}
        title="label"
      />
    </div>
    <div
      aria-level="3"
      className="tc-text__TcText-sc-15igzev-0 lhcAkf IS3"
      role="heading"
    >
      This is tile headline
    </div>
    <ArticleFlags
      flags={
        Array [
          Object {
            "expiryTime": "2030-03-14T12:00:00.000Z",
            "type": "EXCLUSIVE",
          },
        ]
      }
      longRead={true}
    />
  </div>
</Link>
`;

exports[`tile ac without breakpoint should be like medium 1`] = `
<style>
.IS1 {
  width: 100%;
}

.IS2 {
  margin-bottom: 0px;
}

.IS3 {
  color: #1D1D1B;
  font-family: TimesModern-Bold;
  font-weight: 400;
  margin-bottom: 0;
  font-size: 30;
  line-height: 30px;
  text-align: center;
}

.IS4 {
  flex: 1;
  align-items: center;
  justify-content: center;
  background-color: #F0F0F0;
  padding-horizontal: 20px;
  padding-vertical: 40px;
}
</style>

<Link
  linkStyle={
    Object {
      "flex": 1,
      "padding": "10px",
    }
  }
  url="/article/123"
>
  <Image
    aspectRatio={1.7777777777777777}
    className="IS1"
    fill={true}
    uri="//www.thetimes.co.uk/imageserver/image/methode%2Ftimes%2Fprod%2Fweb%2Fbin%2Fd3abdbfc-1776-11e6-b4ba-d249b128bacc.jpg?crop=620%2C348%2C0%2C32"
  />
  <div
    className="tc-view__TcView-nuazoi-0 fPjBcr IS4"
  >
    <div
      className="tc-view__TcView-nuazoi-0 fPjBcr IS2"
    >
      <ArticleLabel
        color="#005B8D"
        isVideo={false}
        title="label"
      />
    </div>
    <div
      aria-level="3"
      className="tc-text__TcText-sc-15igzev-0 lhcAkf IS3"
      role="heading"
    >
      This is tile headline
    </div>
    <ArticleFlags
      flags={
        Array [
          Object {
            "expiryTime": "2030-03-14T12:00:00.000Z",
            "type": "EXCLUSIVE",
          },
        ]
      }
      longRead={true}
    />
  </div>
</Link>
`;
